Problem: I don't like the tagline
Solution: try another one

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Event sourcing database engine that doesn't overwrite data.
       </p>
       <p style="font-size: 18pt">
-        <i>Data is gold. Let's treat it this way.</i>
+        <i>Data is gold. Don't let it slip away.</i>
       </p>
       <p style="font-size: 18pt"><a href="/doc">Documentation</a> | <a href="https://github.com/PumpkinDB/PumpkinDB">Source code</a> </p>
     </center>
