Add a link to the first version

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <p style="font-size: 18pt">
         <i>Data is gold. Don't let it slip away.</i>
       </p>
+      <p style="background-color: #202020; border-radius: 5px; width: 50%; color: #fafafa; font-size: 14pt; padding: 20px">
+        <code>[<a href="https://github.com/PumpkinDB/PumpkinDB/releases/tag/v0.1.0" style="color: #fafafa">"0.1"</a> VERSION] TRY</code>
+      </p>
       <p style="font-size: 18pt"><a href="/doc">Documentation</a> | <a href="https://github.com/PumpkinDB/PumpkinDB">Source code</a> </p>
     </center>
 
